# 7z-Modern-UI-Test-Project

./: .gitignore  AGENTS.md  build.bat
CPP/7zip/Bundles/: 7zip.sln
CPP/7zip/Bundles/Fm/: 7zFM.vcxproj  CMakeLists.txt  build.bat
CPP/7zip/Bundles/Fm/x64/: resource.res
WinUI/SevenZipManager/SevenZipManager/: App.xaml  App.xaml.cs  CompressDialog.xaml  CompressDialog.xaml.cs  CompressionOptions.cs  ExtractDialog.xaml  ExtractDialog.xaml.cs  FileItem.cs  MainWindow.xaml  MainWindow.xaml.cs  SettingsDialog.xaml  SettingsDialog.xaml.cs  SevenZipManager.csproj  SfxWindow.xaml  SfxWindow.xaml.cs  app.manifest
WinUI/SevenZipManager/SevenZipManager/Services/: SevenZipService.cs
WinUI/SevenZipManager/SevenZipManager/ViewModels/: MainViewModel.cs
